# Tasks

PcapPlusPlus/: CMakeLists.txt  main.cpp  main_libpcap.cpp  main_machine.cpp  main_pcapplusplus.cpp  main_wire.cpp
Shared Pointer/: CMakeLists.txt
Shared Pointer/src/: shared_ptr.cpp
Shared Pointer/tests/: CMakeLists.txt  SahredPointerTest.cpp  SharedPointerTest.cpp
Vector/: .gitignore  CMakeLists.txt
Vector/src/: vector.cpp
Vector/tests/: CMakeLists.txt  VectorTest.cpp
connection based udp/: CMakeLists.txt  client.cpp  server.cpp
man in the middle/: CMakeLists.txt  main.cpp
udp_server_client/: CMakeLists.txt  client.cpp  server.cpp
